--- a/index.html
+++ b/index.html
@@ -5,53 +5,53 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <header class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="aaa-image" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-element">
-      <h1>ToDo app</h1>
+      <h1 class="page-title">ToDo app</h1>
       <section id="top-section-for-adding-element-to-list">
-        <h2 for="new-task">Add Item</h2>
+        <h2 class="title new-task" for="new-task">Add Item</h2>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="input task" type="text">
+          <button class="button">Add</button>
         </div>
       </section>
       <section>
-        <h2>Todo</h2>
-        <ul id="incomplete-tasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
+        <h2 class="title">Todo</h2>
+        <ul class="list" id="incomplete-tasks">
+          <li class="list-item">
+            <input class="checkbox" type="checkbox">
+            <label class="task name">Pay Bills</label>
+            <input type="text" class="input task">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="img" src="./remove.svg">
             </button>
           </li>
-          <li class="edit-mode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg">
+          <li class="list-item edit-mode">
+            <input class="checkbox" type="checkbox">
+            <label class="task name">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input task">
+            <button class="button edit">Save</button>
+            <button class="button delete">
+              <img class="img" src="./remove.svg">
             </button>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Completed</h2>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
+        <h2 class="title">Completed</h2>
+        <ul class="list" id="completed-tasks">
+          <li class="list-item">
+            <input class="checkbox" type="checkbox" checked>
+            <label class="task name">See the Doctor</label>
+            <input type="text" class="input task">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="img" src="./remove.svg">
             </button>
           </li>
         </ul>
