refactor(extended-1.2): add alt attribute to images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="aaa">
-      <img class="aaa-image" src="./eisenhower-matrix.jpg">
+      <img class="aaa-image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix image">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-element">
@@ -28,7 +28,7 @@
             <input type="text" class="input task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="img" src="./remove.svg">
+              <img class="img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -37,7 +37,7 @@
             <input type="text" value="Go Shopping" class="input task">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="img" src="./remove.svg">
+              <img class="img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
         </ul>
@@ -51,7 +51,7 @@
             <input type="text" class="input task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="img" src="./remove.svg">
+              <img class="img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
         </ul>
