refactor(basic-3.3): use concise class names

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header__image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix image">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix image">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main-page">
-      <h1 class="main-page__title">ToDo app</h1>
+    <main class="main">
+      <h1 class="main__title">ToDo app</h1>
       <section class="tasks new-tasks">
         <h2 class="tasks__title new-tasks__title">Add Item</h2>
         <div class="new-tasks__wrapper">
           <input id="new-task"class="input new-tasks__input" type="text">
-          <button class="button new-tasks__button">Add</button>
+          <button class="btn new-tasks__btn">Add</button>
         </div>
       </section>
       <section class="tasks tasks-incomplete">
@@ -26,18 +26,18 @@
             <input class="task__checkbox" type="checkbox">
             <label class="task__name">Pay Bills</label>
             <input type="text" class="input task__input">
-            <button class="button task__button-edit">Edit</button>
-            <button class="button task__button-delete">
-              <img class="button__image" src="./remove.svg" alt="Delete task cross icon">
+            <button class="btn task__btn-edit">Edit</button>
+            <button class="btn task__btn-delete">
+              <img class="btn__img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
           <li class="task task-edit">
             <input class="task__checkbox" type="checkbox">
             <label class="task__name">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input task__input">
-            <button class="button task__button-edit">Save</button>
-            <button class="button task__button-delete">
-              <img class="button__image" src="./remove.svg" alt="Delete task cross icon">
+            <button class="btn task__btn-edit">Save</button>
+            <button class="btn task__btn-delete">
+              <img class="btn__img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
         </ul>
@@ -49,9 +49,9 @@
             <input class="task__checkbox" type="checkbox" checked>
             <label class="task__name">See the Doctor</label>
             <input type="text" class="input task__input">
-            <button class="button task__button-edit">Edit</button>
-            <button class="button task__button-delete">
-              <img class="button__image" src="./remove.svg" alt="Delete task cross icon">
+            <button class="btn task__btn-edit">Edit</button>
+            <button class="btn task__btn-delete">
+              <img class="btn__img" src="./remove.svg" alt="Delete task cross icon">
             </button>
           </li>
         </ul>
